# app-appointments

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: AGENTS.md
.github/skills/backend-guardrails/: SKILL.md
.github/skills/docs-sync/: SKILL.md
.github/skills/implementation-flow/: SKILL.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/application/identity/: __init__.py  ports.py
backend/app/application/identity/use_cases/: get_current_user.py  request_otp_login.py  verify_otp_login.py
backend/app/core/: config.py
backend/app/infrastructure/: __init__.py  db.py
backend/app/infrastructure/persistence/: __init__.py  base.py  models.py  otp_repository.py
backend/app/infrastructure/security/: __init__.py  dependencies.py  jwt_service.py  otp_service.py
backend/app/presentation/api/routes/: __init__.py  auth.py
backend/app/presentation/api/schemas/: __init__.py  auth.py
backend/migrations/: env.py
backend/migrations/versions/: 20260401_0001_initial_schema.py
docs/: api.md  architecture.md  backend.md  database.md  devops.md  frontend.md  implementacion.md  quailty.md  security.md
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
prompts/: prompt-agents.md  prompt-api.md  prompt-architecture.md  prompt-backend.md  prompt-database.md  prompt-devops.md  prompt-frontend.md  prompt-implementacion.md  prompt-quality.md  prompt-skills.md  propmt-security.md
(+1 files in other folders)
